--- a/build
+++ b/build
@@ -3,25 +3,25 @@
 
 $stderr = fopen('php://stderr', 'w');
 
+array_shift($argv);
+
 require dirname(__FILE__) . '/Packager/packager.php';
 
-$executable = array_shift($argv);
 $package = dirname(__FILE__) . '/Source';
 
 $pkg = new Packager($package);
-
-fwrite($stderr, "/*");
-fwrite($stderr, "Packager is building AtomJS\n\n");
-fwrite($stderr, "Included Components:\n");
 
 $files = (empty($argv)) ? $pkg->get_all_files() : $pkg->components_to_files($argv);
 
 $files = $pkg->complete_files($files);
 
+fwrite($stderr, "/**\n");
+fwrite($stderr, " * AtomJS\n * \n");
+fwrite($stderr, " * Included Components:\n");
 foreach ($files as $file){
-	fwrite($stderr, "- $file: [" . implode(", ", $pkg->get_file_provides($file)) . "]\n");
+	fwrite($stderr, " * - $file: [" . implode(", ", $pkg->get_file_provides($file)) . "]\n");
 }
-fwrite($stderr, "*/");
+fwrite($stderr, " */\n\n");
 
 $output = $pkg->build($files, array(), array(), array());
 
