atom 'use strict' now

--- a/Source/package.yml
+++ b/Source/package.yml
@@ -13,3 +13,5 @@ copyright: "&copy; [AtomJS](http://atomjs.com)"
 authors: "[AtomJS Development Team](http://atomjs.com)"
 
 sources: "*.js"
+
+overall: "overall.js"
