dual license now

--- a/Source/package.yml
+++ b/Source/package.yml
@@ -6,7 +6,9 @@ web: "[atomjs.com](http://atomjs.com/)"
 
 description: "Atom, The JavaScript framework"
 
-license: "[GNU Lesser General Public License](http://opensource.org/licenses/lgpl-license.php)"
+license:
+	- "[GNU Lesser General Public License](http://opensource.org/licenses/lgpl-license.php)"
+	- "[MIT License](http://opensource.org/licenses/mit-license.php)"
 
 copyright: "&copy; [AtomJS](http://atomjs.com)"
 
